<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_main_email"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:id="@+id/linear_layout_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

        <Button
            android:id="@+id/button_add_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addEmail"
            android:text="@string/text_add_email" />

        <TextView
            android:id="@+id/text_view_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_main_telephone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_text_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <LinearLayout
            android:id="@+id/linear_layout_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/button_add_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addTelephone"
            android:text="@string/text_add_telephone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_notifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_receive_notifications" />

            <RadioGroup
                android:id="@+id/rg_notifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/rb_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_email" />

                <RadioButton
                    android:id="@+id/rb_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_telephone" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clearForm"
                android:text="@string/text_clear" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_save" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>